# note_evaluation

./: .env.example  README.md  app.py  my_note.txt  note_comparison.md  note_next_steps.md  note_summary.md  pyproject.toml  report.md  requirements.txt
src/note_eval/: crew.py  main.py
src/note_eval/config/: tasks.yaml
