[project]
name = "note_eval"
version = "0.1.0"
description = "note_eval using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
note_eval = "note_eval.main:run"
run_crew = "note_eval.main:run"
train = "note_eval.main:train"
replay = "note_eval.main:replay"
test = "note_eval.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
